# PQAnalysis

./: .buildinfo  .codecov.yml  .coverage.Mac.fritz.box.87665.XkLEGJIx  .docstr.yaml  .gitignore  .mailmap  .pylintrc  .style copy.yapf  .style.yapf  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  _version.py  codecov.yml  genindex.html  gmon.out  index.html  jag  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  pytest.sh  search.html  searchindex.js  setup.py  sitemap.xml  test
.githooks/: commit-msg
.github/: pull_request_template.md
.github/.pylint_cache/: PQAnalysis_1.stats
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: parse_pylint.py
.github/workflows/: changelog.yml  ci.yml  codecov.yml  docs.yml  docstr.yml  jekyll-gh-pages.yml  pr-title.yml  pylint.yml  release.yml
PQAnalysis/: __init__.py  config.py  exceptions.py  formats.py  type_checking.py  types.py  version.py
PQAnalysis/analysis/: __init__.py  exceptions.py  rdf.py  traj2comtraj.py
PQAnalysis/atom/: element.py  molecule.py
PQAnalysis/atomicSystem/: __init__.py  _decorators.py  _positions.py  _properties.py  _standardProperties.py  atomicSystem.py  exceptions.py
PQAnalysis/atomicUnits/: element.py  molecule.py
PQAnalysis/atomic_system/: __init__.py  _decorators.py  _positions.py  _properties.py  _standard_properties.py  atomic_system.py  exceptions.py
PQAnalysis/cli/: __init__.py  _argumentParser.py  _argument_parser.py  _cli_base.py  activate_argcomplete.py  add_molecules.py  adf.py  build_nep_traj.py  build_spectrum.py  bulk_modulus.py  check_momentum.py  continue_input.py  diffcalc.py  finite_difference.py  gen2xyz.py  green_kubo.py  main.py  msd.py  rdf.py  rst2xyz.py  thermal_expansion.py  traj2box.py  traj2extxyz.py  traj2qmcfc.py  vacf.py  vibrations.py  xyz2gen.py  xyz2rst.py
PQAnalysis/coordinates/: coordinates.py
PQAnalysis/core/: __init__.py  api.py  atom.py  atomicSystem.py  cell.py  common.py  exceptions.py  frame.py  kernels.py  residue.py  trajectory.py
PQAnalysis/grammar/: PIMD_QMCF_inputGrammar.lark  PQ_inputGrammar.lark  QMCFC_inputGrammar.lark  inputGrammar.lark  rules.lark  selection.lark  terminals.lark
PQAnalysis/io/: __init__.py  api.py  base.py  boxWriter.py  box_file_reader.py  box_reader.py  box_writer.py  conversion_api.py  energyFileReader.py  energy_file_reader.py  exceptions.py  formats.py  frameReader.py  genFileReader.py  infoFileReader.py  info_file_reader.py  moldescriptorReader.py  moldescriptor_reader.py  optimizer_file_reader.py  restartReader.py  restartWriter.py  trajectoryReader.py  trajectoryWriter.py  write_api.py
PQAnalysis/pbc/: cell.py
PQAnalysis/physicalData/: __init__.py  energy.py  exceptions.py
PQAnalysis/physical_data/: __init__.py  box.py  energy.py  exceptions.py
PQAnalysis/selection/: selection.py
PQAnalysis/tools/: __init__.py  add_molecule.py  traj2comtraj.py  traj_to_com_traj.py
PQAnalysis/topology/: __init__.py  angle.py  api.py  bond.py  bondedTopology.py  dihedral.py  exceptions.py  molType.py  residue.py  selection.py  shakeTopology.py  shake_topology.py  topology.py
PQAnalysis/traj/: __init__.py  api.py  exceptions.py  formats.py  frame.py  frame.py.old  selection.py  trajectory.py
PQAnalysis/utils/: __init__.py  common.py  custom_logging.py  decorators.py  docs.py  exceptions.py  files.py  instance.py  math.py  mytypes.py  random.py  string.py  units.py
_modules/: index.html
_modules/PQAnalysis/: exceptions.html  formats.html  type_checking.html
_sources/: index.rst.txt
_sources/code/: PQAnalysis.analysis.momentum.api.rst.txt  PQAnalysis.analysis.momentum.exceptions.rst.txt  PQAnalysis.analysis.momentum.momentum.rst.txt  PQAnalysis.analysis.momentum.momentum_output_file_writer.rst.txt  PQAnalysis.analysis.rst.txt  (+66 more)
benchmarks/: pytest.ini
code/: PQAnalysis.analysis.html  PQAnalysis.analysis.momentum.api.html  PQAnalysis.analysis.momentum.exceptions.html  PQAnalysis.analysis.momentum.html  PQAnalysis.analysis.momentum.momentum.html  PQAnalysis.analysis.momentum.momentum_output_file_writer.html  PQAnalysis.analysis.msd.api.html  PQAnalysis.analysis.msd.exceptions.html  PQAnalysis.analysis.msd.html  PQAnalysis.analysis.msd.msd.html  PQAnalysis.analysis.msd.msd_input_file_reader.html  PQAnalysis.analysis.msd.msd_output_file_writer.html  PQAnalysis.analysis.rdf.api.html  PQAnalysis.analysis.rdf.exceptions.html  PQAnalysis.analysis.rdf.html  PQAnalysis.analysis.rdf.rdf.html  PQAnalysis.analysis.rdf.rdf_input_file_reader.html  PQAnalysis.analysis.rdf.rdf_output_file_writer.html  PQAnalysis.analysis.spectrum_broadening.api.html  PQAnalysis.analysis.spectrum_broadening.exceptions.html  PQAnalysis.analysis.spectrum_broadening.html  PQAnalysis.analysis.spectrum_broadening.spectrum_broadening.html  PQAnalysis.analysis.spectrum_broadening.spectrum_broadening_output_file_writer.html  PQAnalysis.analysis.vacf.api.html  PQAnalysis.analysis.vacf.exceptions.html  PQAnalysis.analysis.vacf.html  PQAnalysis.analysis.vacf.spectrum.html  PQAnalysis.analysis.vacf.vacf.html  PQAnalysis.analysis.vacf.vacf_input_file_reader.html  PQAnalysis.analysis.vacf.vacf_output_file_writer.html  PQAnalysis.analysis.vibrational.api.html  PQAnalysis.analysis.vibrational.exceptions.html  PQAnalysis.analysis.vibrational.html  PQAnalysis.analysis.vibrational.vibrational_analysis.html  PQAnalysis.analysis.vibrational.vibrational_input_file_reader.html  PQAnalysis.atomic_system.atomic_system.html  PQAnalysis.atomic_system.exceptions.html  PQAnalysis.atomic_system.html  PQAnalysis.cli.add_molecules.html  PQAnalysis.cli.build_nep_traj.html  (+118 more)
conda-recipes/: README.md
cpp/src/cell/: CMakeLists.txt  cell.cpp  cell_py.cpp
cpp/src/traj_file/: CMakeLists.txt  process_lines.cpp  process_lines_py.cpp
developerGuide/: developerGuide.html
docs/: autodoc.sh
src/: traj2box.py  traj2qmcfc.py
tests/: __init__.py  conftest.py  test_formats.py  test_type_checking.py  test_version.py
tmpdir/: acof_triclinic.xyz  run-08.in  run-10.in.ref  traj.qmcfc.xyz
userGuide/: inputFile.html  userGuide.html
(+810 files in other folders)
