[build-system]
requires = ["setuptools>=70", "setuptools_scm>=8", "wheel", "numpy", "Cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "PQAnalysis"
dynamic = ["version"]
authors = [
    { name = "Jakob Gamper", email = "97gamjak@gmail.com" },
    { name = "Josef M. Gallmetzer", email = "gallmetzer.josef@gmail.com" },
    { name = "Clarissa A. Seidler", email = "clarissa.seidler@gmail.com" },
]
description = "PQAnalysis is a python package for the analysis of PQ simulations."
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "beartype",
    "multimethod",
    "lark",
    "tqdm",
    "decorator",
    "argcomplete",
    "rich-argparse",
]

[project.optional-dependencies]
test = [
    "ase",
    "pytest",
    "pytest-cov",
    "pylint",
    "coverage",
    "docstr-coverage",
]
dev = [
    "yapf",
]
docs = [
    "sphinx>=7,<9",
    "sphinx-sitemap",
    "sphinx-rtd-theme",
    "breathe",
    "myst-parser",
    "better-apidoc",
    "six",
    "docstr-coverage",
]

[tool.setuptools_scm]
version_file = "PQAnalysis/_version.py"
fallback_version = "0.0.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["PQAnalysis*"]

[tool.setuptools.package-data]
PQAnalysis = [
    "grammar/*.lark",
    "io/traj_file/*.pyx",
    "analysis/msd/*.pyx",
    "analysis/vacf/*.pyx",
    "analysis/rdf/*.pyx",
    "analysis/adf/*.pyx",
]

[project.scripts]
pqanalysis = "PQAnalysis.cli.main:main"
traj2box = "PQAnalysis.cli.traj2box:main"
traj2extxyz = "PQAnalysis.cli.traj2extxyz:main"
traj2qmcfc = "PQAnalysis.cli.traj2qmcfc:main"
rst2xyz = "PQAnalysis.cli.rst2xyz:main"
xyz2rst = "PQAnalysis.cli.xyz2rst:main"
continue_input = "PQAnalysis.cli.continue_input:main"
adf = "PQAnalysis.cli.adf:main"
rdf = "PQAnalysis.cli.rdf:main"
msd = "PQAnalysis.cli.msd:main"
green_kubo = "PQAnalysis.cli.green_kubo:main"
vacf = "PQAnalysis.cli.vacf:main"
build_spectrum = "PQAnalysis.cli.build_spectrum:main"
check_momentum = "PQAnalysis.cli.check_momentum:main"
vibrations = "PQAnalysis.cli.vibrations:main"
add_molecules = "PQAnalysis.cli.add_molecules:main"
activate_argcomplete = "PQAnalysis.cli.activate_argcomplete:main"
build_nep_traj = "PQAnalysis.cli.build_nep_traj:main"
xyz2gen = "PQAnalysis.cli.xyz2gen:main"
gen2xyz = "PQAnalysis.cli.gen2xyz:main"

[project.urls]
"Homepage" = "https://github.com/MolarVerse/PQAnalysis"
"PQ" = "https://github.com/MolarVerse/PQ"
